--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,12 +12,13 @@
     android:weightSum="10"
     tools:context="com.onetrak.graph.customview.MainActivity">
 
-    <HorizontalScrollView
+    <com.onetrak.graph.customview.graphview.ArrowedHorizontalScrollView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="5"
         android:scrollbars="none">
 
+        
         <com.onetrak.graph.customview.graphview.GraphView
             android:id="@+id/graph"
             android:layout_width="wrap_content"
@@ -27,8 +28,8 @@
             custom:back_line_color="@color/lineColor"
             custom:graph_line_color="@color/graphColor"
             custom:text_color="@color/textColor"/>
-            <!--custom:real_width="240"/>-->
-    </HorizontalScrollView>
+        <!--custom:real_width="240"/>-->
+    </com.onetrak.graph.customview.graphview.ArrowedHorizontalScrollView>
 
     <Button
         android:id="@+id/butt"
