--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,40 +19,31 @@
         android:scrollbars="none">
 
 
-        <com.onetrak.graph.customview.graphview.UnoGraphView
+        <com.onetrak.graph.customview.graphview.GraphView
             android:id="@+id/graph"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             custom:fill_na="true"
-            custom:graph_line_color="@color/graphColor" />
-        <!--custom:real_width="240"/>-->
-    </com.onetrak.graph.customview.graphview.ArrowedHorizontalScrollView>
-
-
-    <com.onetrak.graph.customview.graphview.ArrowedHorizontalScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="0px"
-        android:layout_weight="5"
-        android:scrollbars="none">
-
-
-        <com.onetrak.graph.customview.graphview.MultiGraphView
-            android:id="@+id/multi_graph"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            custom:fill_na="true"
-            custom:graph_line_color="@color/graphColor" />
-        <!--custom:real_width="240"/>-->
+            custom:graph_line_color="@color/graphColor"/>
+            <!--custom:real_width="240" />-->
     </com.onetrak.graph.customview.graphview.ArrowedHorizontalScrollView>
 
     <Button
-        android:id="@+id/butt"
         android:layout_width="match_parent"
         android:layout_height="0px"
         android:layout_weight="2"
-        android:onClick="onClick"
+        android:onClick="onClick1"
         android:paddingLeft="100dp"
         android:paddingRight="100dp"
-        android:text="@string/buttonText" />
+        android:text="@string/button1Text" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="2"
+        android:onClick="onClick2"
+        android:paddingLeft="100dp"
+        android:paddingRight="100dp"
+        android:text="@string/button2Text" />
 
 </LinearLayout>
